fixed navbar preliminary complete

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="index.html">Home</a>
+                    <a class="active" href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="#">PlayStation 5</a>
@@ -29,7 +29,7 @@
         </nav>
     </header>
     <section>
-    
+        <div class="example"></div>
     </section>
     <section>
     
