add hero image, wrong image, navbar not fixed position

--- a/index.html
+++ b/index.html
@@ -28,8 +28,12 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <div class="example"></div>
+    <section id="hero-outer">
+        <div id="hero-image"></div>
+        <div id="cover-text">
+            <h2>The latest generation is here!</h2>
+            <h3>The playstation 5 and xbox series x have been released. But which one is for you? Take a look around to find out.</h3>
+        </div>
     </section>
     <section>
     
