add footer, social links only

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+    <script src="https://kit.fontawesome.com/f10a3754d1.js" crossorigin="anonymous"></script>
     <title>Gen5</title>
 </head>
 <body>
@@ -42,7 +43,23 @@
     
     </section>
     <footer>
-    
+        <ul class="social-links">
+            <li>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com/login?lang=en" target="_blank"><i class="fab fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+            </li>
+            <li>
+                <a href="https://uk.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube-square"></i></a>
+            </li>
+        </ul>
     </footer>
 </body>
 </html>
