--- a/index.html
+++ b/index.html
@@ -43,23 +43,29 @@
     
     </section>
     <footer>
-        <ul class="social-links">
-            <li>
-                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
-            </li>
-            <li>
-                <a href="https://twitter.com/login?lang=en" target="_blank"><i class="fab fa-twitter-square"></i></a>
-            </li>
-            <li>
-                <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
-            </li>
-            <li>
-                <a href="https://uk.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            </li>
-            <li>
-                <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube-square"></i></a>
-            </li>
-        </ul>
+        <div id="footer-message">
+            <h2>Sign up now!</h2>
+            <p>Want to win a console of your choice. Go to our sign up page to find out more.</p>
+        </div>
+        <div id="footer-links">
+            <ul class="social-links">
+                <li>
+                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/login?lang=en" target="_blank"><i class="fab fa-twitter-square"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+                </li>
+                <li>
+                    <a href="https://uk.linkedin.com/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube-square"></i></a>
+                </li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
