add hr and styling

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                     <a class="active" href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="#">PlayStation 5</a>
+                    <a href="#">Xbox Series X</a>
                 </li>
                 <li>
-                    <a href="#">Xbox Series X</a>
+                    <a href="#">PlayStation 5</a>
                 </li>
                 <li>
                     <a href="#">Sign Up</a>
@@ -36,9 +36,11 @@
             <h3>The playstation 5 and xbox series x have been released. But which one is for you? Take a look around to find out.</h3>
         </div>
     </section>
+    <hr>
     <section>
-    
+        <p>Hello</p>
     </section>
+    <hr>
     <section>
     
     </section>
