add table and styling

--- a/index.html
+++ b/index.html
@@ -38,7 +38,26 @@
     </section>
     <hr>
     <section>
-        <p>Hello</p>
+        <div style="overflow-x:auto">
+            <table>
+                <caption>Console Comparison</caption>
+                <tr>
+                    <th>Xbox Series X</th>
+                    <th>Features</th>
+                    <th>PlayStation 5</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>5</td>
+                    <td>6</td>
+                </tr>
+            </table>
+        </div>
     </section>
     <hr>
     <section>
