--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <footer>
         <div id="footer-message">
             <h2>Sign up now!</h2>
-            <p>Want to win a console of your choice. Go to our sign up page to find out more.</p>
+            <p>Want to win a console of your choice. Go to our sign up page to find out more. <a href="#"><i class="fas fa-gift"></i></a></p>
         </div>
         <div id="footer-links">
             <ul class="social-links">
