--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </ul>
         </nav>
     </header>
-    <section id="hero-outer">
-        <div id="hero-image"></div>
+    <section>
+        <img src="assets/images/combo.jpg" alt="Consoles" class="hero-image">
         <div id="cover-text">
             <h2>The latest generation is here!</h2>
             <h3>The playstation 5 and xbox series x have been released. But which one is for you? Take a look around to find out.</h3>
