add other .html pages, add links

--- a/ps5.html
+++ b/ps5.html
@@ -15,13 +15,13 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a class="active" href="index.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="xbox.html">Xbox Series X</a>
                 </li>
                 <li>
-                    <a href="ps5.html">PlayStation 5</a>
+                    <a class="active" href="ps5.html">PlayStation 5</a>
                 </li>
                 <li>
                     <a href="sign-up.html">Sign Up</a>
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <section>
-        <img src="assets/images/combo.jpg" alt="Consoles" class="hero-image">
+        <img src="assets/images/ps5-2.jpg" alt="Consoles" class="hero-image">
         <div id="cover-text">
             <h2>The latest generation is here!</h2>
             <h3>The playstation 5 and xbox series x have been released. But which one is for you? Take a look around to find out.</h3>
