--- a/sign-up.html
+++ b/sign-up.html
@@ -15,7 +15,7 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a class="active" href="index.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="xbox.html">Xbox Series X</a>
@@ -24,7 +24,7 @@
                     <a href="ps5.html">PlayStation 5</a>
                 </li>
                 <li>
-                    <a href="sign-up.html">Sign Up</a>
+                    <a class="active" href="sign-up.html">Sign Up</a>
                 </li>
             </ul>
         </nav>
