--- a/sign-up.html
+++ b/sign-up.html
@@ -15,16 +15,16 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="index.html">Home</a>
+                    <a class="active" href="index.html"><i class="fas fa-home"></i> Home</a>
                 </li>
                 <li>
-                    <a href="xbox.html">Xbox Series X</a>
+                    <a href="xbox.html"><i class="fab fa-xbox"></i> Xbox Series X</a>
                 </li>
                 <li>
-                    <a href="ps5.html">PlayStation 5</a>
+                    <a href="ps5.html"><i class="fab fa-playstation"></i> PlayStation 5</a>
                 </li>
                 <li>
-                    <a class="active" href="sign-up.html">Sign Up</a>
+                    <a href="sign-up.html"><i class="fas fa-user-plus"></i> Sign Up</a>
                 </li>
             </ul>
         </nav>
