add new orange, increase media q

--- a/xbox.html
+++ b/xbox.html
@@ -15,10 +15,10 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a class="active" href="index.html"><i class="fas fa-home"></i> Home</a>
+                    <a href="index.html"><i class="fas fa-home"></i> Home</a>
                 </li>
                 <li>
-                    <a href="xbox.html"><i class="fab fa-xbox"></i> Xbox Series X</a>
+                    <a class="active" href="xbox.html"><i class="fab fa-xbox"></i> Xbox Series X</a>
                 </li>
                 <li>
                     <a href="ps5.html"><i class="fab fa-playstation"></i> PlayStation 5</a>
