--- a/ps5.html
+++ b/ps5.html
@@ -15,13 +15,13 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a class="active" href="index.html"><i class="fas fa-home"></i> Home</a>
+                    <a href="index.html"><i class="fas fa-home"></i> Home</a>
                 </li>
                 <li>
                     <a href="xbox.html"><i class="fab fa-xbox"></i> Xbox Series X</a>
                 </li>
                 <li>
-                    <a href="ps5.html"><i class="fab fa-playstation"></i> PlayStation 5</a>
+                    <a class="active" href="ps5.html"><i class="fab fa-playstation"></i> PlayStation 5</a>
                 </li>
                 <li>
                     <a href="sign-up.html"><i class="fas fa-user-plus"></i> Sign Up</a>
