add table message, add media q

--- a/index.html
+++ b/index.html
@@ -33,12 +33,16 @@
         <img src="assets/images/combo.jpg" alt="Consoles" class="hero-image">
         <div id="cover-text">
             <h2>The latest generation is here!</h2>
-            <h3>The playstation 5 and xbox series x have been released. But which one is for you? Take a look around to find out.</h3>
+            <p>The playstation 5 and xbox series x have been released. But which one is for you? Take a look around to find out.</p>
         </div>
     </section>
     <hr>
     <section>
-        <div style="overflow-x:auto">
+        <div class="table-message">
+            <p><b>Note:</b> On tablet or mobile devices, portions of the table below may be hidden. Use the horizontal 
+            scrollbar to reveal the hidden information</p>
+        </div>
+        <div class="table" style="overflow-x:auto">
             <table>
                 <caption>Console Comparison</caption>
                 <tr>
