add structure to other .html pages

--- a/ps5.html
+++ b/ps5.html
@@ -31,37 +31,18 @@
     </header>
     <section>
         <img src="assets/images/ps5-2.jpg" alt="Consoles" class="hero-image">
-        <div id="cover-text">
-            <h2>The latest generation is here!</h2>
-            <h3>The playstation 5 and xbox series x have been released. But which one is for you? Take a look around to find out.</h3>
-        </div>
     </section>
     <hr>
     <section>
-        <div style="overflow-x:auto">
-            <table>
-                <caption>Console Comparison</caption>
-                <tr>
-                    <th>Xbox Series X</th>
-                    <th>Features</th>
-                    <th>PlayStation 5</th>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>2</td>
-                    <td>3</td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td>5</td>
-                    <td>6</td>
-                </tr>
-            </table>
-        </div>
+        <p>Accessories carosel</p>
     </section>
     <hr>
     <section>
-    
+        <p>games accordion</p>
+    </section>
+    <hr>
+    <section>
+        <p>video trailer</p>
     </section>
     <footer>
         <div id="footer-message">
