--- a/sign-up.html
+++ b/sign-up.html
@@ -30,38 +30,11 @@
         </nav>
     </header>
     <section>
-        <img src="assets/images/combo.jpg" alt="Consoles" class="hero-image">
-        <div id="cover-text">
-            <h2>The latest generation is here!</h2>
-            <h3>The playstation 5 and xbox series x have been released. But which one is for you? Take a look around to find out.</h3>
-        </div>
+        <p>Sign up form</p>
     </section>
     <hr>
     <section>
-        <div style="overflow-x:auto">
-            <table>
-                <caption>Console Comparison</caption>
-                <tr>
-                    <th>Xbox Series X</th>
-                    <th>Features</th>
-                    <th>PlayStation 5</th>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>2</td>
-                    <td>3</td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td>5</td>
-                    <td>6</td>
-                </tr>
-            </table>
-        </div>
-    </section>
-    <hr>
-    <section>
-    
+        <p>progress bar</p>
     </section>
     <footer>
         <div id="footer-message">
