add console image to ps5 and xbox pages

--- a/ps5.html
+++ b/ps5.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <section>
-        <img src="assets/images/ps5-2.jpg" alt="Consoles" class="hero-image">
+        <img src="assets/images/ps5-2.jpg" alt="Consoles" class="console-image">
     </section>
     <hr>
     <section>
