--- a/xbox.html
+++ b/xbox.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <section>
-        <img src="assets/images/xbox.jpg" alt="Consoles" class="hero-image">
+        <img src="assets/images/xbox.jpg" alt="Consoles" class="console-image">
     </section>
     <hr>
     <section>
