add past ps images

--- a/ps5.html
+++ b/ps5.html
@@ -30,7 +30,18 @@
         </nav>
     </header>
     <section>
-        <img src="assets/images/ps5-2.jpg" alt="Consoles" class="console-image">
+        <div>
+            <img src="assets/images/ps5-2.jpg" alt="Consoles" class="console-image">
+        </div>
+        <div>
+            <img src="assets/images/ps4.jpg" alt="Consoles" class="past-image">
+            <img src="assets/images/ps3.jpg" alt="Consoles" class="past-image">
+            <img src="assets/images/ps2.jpg" alt="Consoles" class="past-image">
+            <img src="assets/images/ps1.jpg" alt="Consoles" class="past-image">
+        </div>
+        <div>
+        
+        </div>
     </section>
     <hr>
     <section>
