add text box and layout to ps5.html

--- a/ps5.html
+++ b/ps5.html
@@ -29,7 +29,7 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <section id="ps-info">
         <div>
             <img src="assets/images/ps5-2.jpg" alt="Consoles" class="console-image">
         </div>
@@ -39,8 +39,9 @@
             <img src="assets/images/ps2.jpg" alt="Consoles" class="past-image">
             <img src="assets/images/ps1.jpg" alt="Consoles" class="past-image">
         </div>
-        <div>
-        
+        <div id="ps-message">
+            <h2>PlayStation 5</h2>
+            <p>The latest console from sony. Add extra info later.</p>
         </div>
     </section>
     <hr>
