add xbox images and info

--- a/xbox.html
+++ b/xbox.html
@@ -30,7 +30,19 @@
         </nav>
     </header>
     <section>
-        <img src="assets/images/xbox.jpg" alt="Consoles" class="console-image">
+        <div>
+            <img src="assets/images/xbox.jpg" alt="Consoles" class="console-image">
+        </div>
+        <div>
+            <img src="assets/images/x4.jpg" alt="Consoles" class="past-image">
+            <img src="assets/images/x3.jpg" alt="Consoles" class="past-image">
+            <img src="assets/images/x2.jpg" alt="Consoles" class="past-image">
+            <img src="assets/images/x1.jpg" alt="Consoles" class="past-image">
+        </div>
+        <div id="ps-message">
+            <h2>Xbox Series X</h2>
+            <p>The latest console from microsoft. Add extra info later.</p>
+        </div>
     </section>
     <hr>
     <section>
