add videos to ps an xbox pages

--- a/ps5.html
+++ b/ps5.html
@@ -54,7 +54,9 @@
     </section>
     <hr>
     <section>
-        <p>video trailer</p>
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ZmSNJEYtyds" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </section>
     <footer>
         <div id="footer-message">
