--- a/ps5.html
+++ b/ps5.html
@@ -58,13 +58,13 @@
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="assets/images/ps5-2.jpg" alt="First Slide">
+                <img src="assets/images/psa3.jpg" alt="First Slide">
             </div>
             <div class="carousel-item">
-                <img src="assets/images/ps4.jpg" alt="Second Slide">
+                <img src="assets/images/psa1.jpg" alt="Second Slide">
             </div>
             <div class="carousel-item">
-                <img src="assets/images/ps3.jpg" alt="Third Slide">
+                <img src="assets/images/psa2.jpg" alt="Third Slide">
             </div>
         </div>
         <!-- Carousel controls -->
