--- a/ps5.html
+++ b/ps5.html
@@ -77,79 +77,61 @@
     <hr>
     <section>
         <div class="accordion" id="accordionExample">
-          <div class="card">
-            <div class="card-header" id="headingOne">
-              <h2 class="mb-0">
-                <button
-                  class="btn btn-link btn-block text-left"
-                  type="button"
-                  data-toggle="collapse"
-                  data-target="#collapseOne"
-                  aria-expanded="true"
-                  aria-controls="collapseOne"
-                >
-                  Latest Releases
-                </button>
-              </h2>
+            <div class="card">
+                <div class="card-header" id="headingOne">
+                    <h2 class="mb-0">
+                        <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne"
+                        aria-expanded="true" aria-controls="collapseOne" >Latest Releases</button>
+                    </h2>
+                </div>
+                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div class="card-body">
+                        <div class="inner-card">
+                            <img src="assets/images/psa1.jpg" alt="Avatar" style="width:100%">
+                            <div class="card-container">
+                                <h4><b>John Doe</b></h4>
+                                <p>Architect & Engineer</p>
+                            </div>
+                        </div>
+                        <div class="inner-card">
+                            <img src="assets/images/psa1.jpg" alt="Avatar" style="width:100%">
+                            <div class="card-container">
+                                <h4><b>John Doe</b></h4>
+                                <p>Architect & Engineer</p>
+                            </div>
+                        </div>
+                        <div class="inner-card">
+                            <img src="assets/images/psa1.jpg" alt="Avatar" style="width:100%">
+                            <div class="card-container">
+                                <h4><b>John Doe</b></h4>
+                                <p>Architect & Engineer</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-            <div
-              id="collapseOne"
-              class="collapse show"
-              aria-labelledby="headingOne"
-              data-parent="#accordionExample"
-            >
-              <div class="card-body">3 cards</div>
+            <div class="card">
+                <div class="card-header" id="headingTwo">
+                     <h2 class="mb-0">
+                        <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
+                        aria-expanded="false" aria-controls="collapseTwo">Pre-order</button>
+                    </h2>
+                </div>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                    <div class="card-body">3 cards</div>
+                </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="card-header" id="headingTwo">
-              <h2 class="mb-0">
-                <button
-                  class="btn btn-link btn-block text-left collapsed"
-                  type="button"
-                  data-toggle="collapse"
-                  data-target="#collapseTwo"
-                  aria-expanded="false"
-                  aria-controls="collapseTwo"
-                >
-                  Pre-order
-                </button>
-              </h2>
+            <div class="card">
+                <div class="card-header" id="headingThree">
+                    <h2 class="mb-0">
+                        <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
+                        aria-expanded="false" aria-controls="collapseThree" >Console Exclusive</button>
+                    </h2>
+                </div>
+                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample" >
+                    <div class="card-body">3 cards</div>
+                </div>
             </div>
-            <div
-              id="collapseTwo"
-              class="collapse"
-              aria-labelledby="headingTwo"
-              data-parent="#accordionExample"
-            >
-              <div class="card-body">3 cards</div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-header" id="headingThree">
-              <h2 class="mb-0">
-                <button
-                  class="btn btn-link btn-block text-left collapsed"
-                  type="button"
-                  data-toggle="collapse"
-                  data-target="#collapseThree"
-                  aria-expanded="false"
-                  aria-controls="collapseThree"
-                >
-                  Console Exclusive
-                </button>
-              </h2>
-            </div>
-            <div
-              id="collapseThree"
-              class="collapse"
-              aria-labelledby="headingThree"
-              data-parent="#accordionExample"
-            >
-              <div class="card-body">3 cards</div>
-            </div>
-          </div>
         </div> 
     </section>
     <hr>
