add cards to all accordion sections

--- a/ps5.html
+++ b/ps5.html
@@ -118,7 +118,29 @@
                     </h2>
                 </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                    <div class="card-body">3 cards</div>
+                    <div class="card-body">
+                                                <div class="inner-card">
+                            <img src="assets/images/psa1.jpg" alt="Avatar" style="width:100%">
+                            <div class="card-container">
+                                <h4><b>John Doe</b></h4>
+                                <p>Architect & Engineer</p>
+                            </div>
+                        </div>
+                        <div class="inner-card">
+                            <img src="assets/images/psa1.jpg" alt="Avatar" style="width:100%">
+                            <div class="card-container">
+                                <h4><b>John Doe</b></h4>
+                                <p>Architect & Engineer</p>
+                            </div>
+                        </div>
+                        <div class="inner-card">
+                            <img src="assets/images/psa1.jpg" alt="Avatar" style="width:100%">
+                            <div class="card-container">
+                                <h4><b>John Doe</b></h4>
+                                <p>Architect & Engineer</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="card">
@@ -129,7 +151,29 @@
                     </h2>
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample" >
-                    <div class="card-body">3 cards</div>
+                    <div class="card-body">
+                                                <div class="inner-card">
+                            <img src="assets/images/psa1.jpg" alt="Avatar" style="width:100%">
+                            <div class="card-container">
+                                <h4><b>John Doe</b></h4>
+                                <p>Architect & Engineer</p>
+                            </div>
+                        </div>
+                        <div class="inner-card">
+                            <img src="assets/images/psa1.jpg" alt="Avatar" style="width:100%">
+                            <div class="card-container">
+                                <h4><b>John Doe</b></h4>
+                                <p>Architect & Engineer</p>
+                            </div>
+                        </div>
+                        <div class="inner-card">
+                            <img src="assets/images/psa1.jpg" alt="Avatar" style="width:100%">
+                            <div class="card-container">
+                                <h4><b>John Doe</b></h4>
+                                <p>Architect & Engineer</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div> 
