--- a/ps5.html
+++ b/ps5.html
@@ -18,13 +18,13 @@
                 <li>
                     <a href="index.html"><i class="fas fa-home"></i> Home</a>
                 </li>
-                <li>
+                <li class="menu-link">
                     <a href="xbox.html"><i class="fab fa-xbox"></i> Xbox Series X</a>
                 </li>
-                <li>
+                <li class="menu-link">
                     <a class="active" href="ps5.html"><i class="fab fa-playstation"></i> PlayStation 5</a>
                 </li>
-                <li>
+                <li class="menu-link">
                     <a href="sign-up.html"><i class="fas fa-user-plus"></i> Sign Up</a>
                 </li>
             </ul>
