--- a/sign-up.html
+++ b/sign-up.html
@@ -31,7 +31,27 @@
         </nav>
     </header>
     <section>
-        <p>Sign up form</p>
+        <div id="signup-info">
+            <h2>Sign up tile</h2>
+            <p>Sign up info</p>
+        </div>
+        <div class="form-section">
+            <form class="signup-form" method="POST" action="https://formdump.codeinstitute.net/">
+                <label for="fname">First Name</label>
+                <input class="text-input" type="text" id="fname" name="first_name" required/>
+                <label for="lname">Last Name</label>
+                <input class="text-input" type="text" id="lname" name="last_name" required/>
+                <label for="email">Email Address</label>
+                <input class="text-input" id="email" type="email" name="email_address" required/>
+                <label for="road">Road</label>
+                <input id="road" type="radio" name="running_preference" value="road" required/>
+                <label for="trail">Trail</label>
+                <input id="trail" type="radio" name="running_preference" value="trail"/>
+                <label for="both">Both</label>
+                <input id="both" type="radio" name="running_preference" value="both"/>
+                <input class="join-button" type="submit" value="Let's Run!"/>
+          </form> 
+        </div>
     </section>
     <hr>
     <section>
