--- a/sign-up.html
+++ b/sign-up.html
@@ -38,18 +38,19 @@
         <div class="form-section">
             <form class="signup-form" method="POST" action="https://formdump.codeinstitute.net/">
                 <label for="fname">First Name</label>
-                <input class="text-input" type="text" id="fname" name="first_name" required/>
+                <input class="text-input" type="text" id="first-name" name="first_name" required/>
                 <label for="lname">Last Name</label>
-                <input class="text-input" type="text" id="lname" name="last_name" required/>
+                <input class="text-input" type="text" id="last-name" name="last_name" required/>
                 <label for="email">Email Address</label>
                 <input class="text-input" id="email" type="email" name="email_address" required/>
-                <label for="road">Road</label>
-                <input id="road" type="radio" name="running_preference" value="road" required/>
-                <label for="trail">Trail</label>
-                <input id="trail" type="radio" name="running_preference" value="trail"/>
-                <label for="both">Both</label>
-                <input id="both" type="radio" name="running_preference" value="both"/>
-                <input class="join-button" type="submit" value="Let's Run!"/>
+                <label for="email">Repeat Email Address</label>
+                <input class="text-input" id="repeat-email" type="email" name="email_address" required/>
+                <hr>
+                <label for="road">Playstation 5</label>
+                <input id="road" type="radio" name="chosen_console" value="road" required/>
+                <label for="trail">Xbox X Series</label>
+                <input id="trail" type="radio" name="chosen_console" value="trail"/>
+                <input class="join-button" type="submit" value="Sign Me Up!"/>
           </form> 
         </div>
     </section>
