--- a/sign-up.html
+++ b/sign-up.html
@@ -45,11 +45,19 @@
                 <input class="text-input" id="email" type="email" name="email_address" required/>
                 <label for="email">Repeat Email Address</label>
                 <input class="text-input" id="repeat-email" type="email" name="email_address" required/>
-                <hr>
-                <label for="road">Playstation 5</label>
-                <input id="road" type="radio" name="chosen_console" value="road" required/>
-                <label for="trail">Xbox X Series</label>
-                <input id="trail" type="radio" name="chosen_console" value="trail"/>
+                <hr id="hr-comp">
+                <div id="comp-section">
+                    <div id="comp-info">
+                        <h4>Competition!</h4>
+                        <p>competition information</p>
+                    </div>
+                    <div id="comp-input">
+                        <label for="road">Playstation 5</label>
+                        <input id="road" type="radio" name="chosen_console" value="road" required/>
+                        <label for="trail">Xbox X Series</label>
+                        <input id="trail" type="radio" name="chosen_console" value="trail"/>
+                    </div>
+                </div>
                 <input class="join-button" type="submit" value="Sign Me Up!"/>
           </form> 
         </div>
